--- a/src/css/reservations.css
+++ b/src/css/reservations.css
@@ -200,12 +200,34 @@ body {
 .copyright p{
     display: block;
     text-align: center;
-    font-size: 12px;
     color: #bbb;
     padding-bottom: 0;
     text-transform: uppercase;
 }
-.copyright p:nth-child(2){
+.copyright-text > p:first-child{
     font-size: 12px;
+}
+.copyright-text > p:nth-child(2){
+    font-size: 12px;
+    -webkit-transform: scale(0.8); 
+    transform: scale(0.8); 
+    position: relative;
+    left: -15px;
+    margin-bottom: 0;
+}
+.copyright-text > p:nth-child(3){
+    font-size: 12px;
+    -webkit-transform: scale(0.8); 
+    transform: scale(0.8); 
+    margin-bottom: 0;
+    position: relative;
+    top: -3px;
+}
+.copyright-text > img{
+    position: absolute;
+    right: 27px;
+    bottom: 4px;
+    width: 15%;
+
 }
         
