--- a/src/css/index.css
+++ b/src/css/index.css
@@ -173,7 +173,17 @@
         margin: 15px auto;
         background-color: #fff;
         border-radius: 5px;
+        position: relative;
     }
+    .recomm>:nth-child(1){
+        position: absolute;
+        top:-4px;
+    }
+    .recomm>:nth-child(1)>img{
+        width: 50%;
+    }
+
+
     .recommContent{
         overflow: hidden;
         border-bottom: 1px solid #edebf9;
@@ -257,7 +267,7 @@
     .attention{
         width:92%;
         margin: 20px auto 0 auto;
-
+        padding-bottom: 150px;
     }
     .attention>div{
         color: #63337d;
@@ -268,46 +278,58 @@
       font-size: 13px;
       margin-bottom: 5px;
     }
-    
-    
-    /*底部版权*
-   
-    .buttom-img{
-        position: absolute;
-        bottom: 157px;
-        width: 100%;
-        }
+    /*底部版权*/
+.buttom-img{
+    position: absolute;
+    bottom: 96px;
+    width: 100%;
+    }
     .copyright{
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 157px;
-        background-color: #6d1c7e;
-        display: block;
-        padding-top: 50px;
-        }
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 96px;
+    background-color: #6d1c7e;
+    display: block;
+    padding-top: 24px;
+    }
+    .copyright-text{
+    position: relative;
+    max-width: 480px;
+    margin: 0 auto;
+    }
     .copyright p{
-        margin: 0 auto;
-        display: block;
-        width:150px ;
-        font-size: 0.875em;
-        color: #bbb;
-        padding-bottom: 15px;
-        text-transform: uppercase;
-        }
-    .questionnaire-survey-question8{
-        position: relative;
-        z-index: 4;
-        }
-    .questionnaire-survey-btn-group{
-        position: relative;
-        z-index: 4;
+    display: block;
+    text-align: center;
+    color: #bbb;
+    padding-bottom: 0;
+    text-transform: uppercase;
     }
-    #one{
-        display: block;
+    .copyright-text > p:first-child{
+    font-size: 12px;
     }
-    .carousel{
-        display: none;
+    .copyright-text > p:nth-child(2){
+    font-size: 12px;
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    position: relative;
+    left: -15px;
+    margin-bottom: 0;
+    }
+    .copyright-text > p:nth-child(3){
+    font-size: 12px;
+    -webkit-transform: scale(0.8);
+    transform: scale(0.8);
+    margin-bottom: 0;
+    position: relative;
+    top: -3px;
+    }
+    .copyright-text > img{
+    position: absolute;
+    right: 27px;
+    bottom: 4px;
+    width: 15%;
+    
     }
 
 
