--- a/src/css/questionnaire.css
+++ b/src/css/questionnaire.css
@@ -279,6 +279,7 @@ body {
 }
 
 
+
 /*底部版权*/
 .buttom-img{
     position: absolute;
@@ -331,4 +332,89 @@ body {
     bottom: 4px;
     width: 15%;
 
+}
+
+
+/*模态框*/
+.modal-dialog{
+    margin-top: 100px;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.modal-header{
+    color: #A257C8;
+    background-color: #A257C8;
+    text-align: center;
+    border: none;
+    height: 110px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.modal-title > img{
+    width: 65%;
+    position: absolute;
+    top: -2px;
+    left: 17%;
+}
+.modal-body{
+    margin: 30px 10px;
+}
+.modal-body > p:first-child{
+    text-indent: 1rem;
+    font-size: 14px;
+}
+.modal-body > p:first-child > em{
+    font-weight: bolder;
+    font-style: normal;
+    color: red;
+}
+.modal-body > p:nth-child(2){
+    float: right;
+}
+.modal-footer{
+    border-bottom: 1px solid #c9c9c9;
+    text-align: center;
+    font-size: 16px;
+}
+.btn-white{
+    background-color: transparent;
+    border: none;
+    color: #6d1c7e;
+}
+.btn-purpel{
+    width: 120px;
+    height: 30px;
+    color: #fff;
+    background-color: #7A3D8F;
+    border-radius: 5px;
+    font-size: 12px;
+}
+.modal-header >button{
+    position: absolute;
+    top: -50px;
+    font-size: 40px;
+    font-weight: lighter;
+    color: #fff;
+    right: 20px;
+}
+.modal-header >button > span{
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 5px;
+    font-size: 30px;
+}
+.modal-header > button > span::before{
+    content: "";
+    height: 30px;
+    width: 30px;
+    border: 2px solid #fff;
+    position: absolute;
+    border-radius: 20px;
+    right: -18px;
+    top: 4px;
+}
+.close:focus, .close:hover{
+    color: #fff;
 }
