--- a/src/css/reservations.css
+++ b/src/css/reservations.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
     font-family: Microsoft YaHei; 
     /* background-color: #efc6ef; */
-    background: url(../images/m_bg_img.jpg);
+    background: url(../images/body_bg.png);
     background-size: contain;
     position: relative;
 }
