--- a/src/css/information.css
+++ b/src/css/information.css
@@ -220,3 +220,103 @@
         font-size: 18px;
         font-weight: lighter;
      }
+
+
+/*模态框*/
+.modal-dialog{
+    margin-top: 100px;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.modal-header{
+    color: #A257C8;
+    background-color: #A257C8;
+    text-align: center;
+    border: none;
+    height: 110px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 0;
+}
+.modal-title{
+    position: relative;
+}
+.modal-title > img:first-child{
+    width: 100%;
+}
+.modal-title > img:nth-child(2){
+    position: absolute;
+    width: 20%;
+    top: 40px;
+    left: 20px;
+    padding-left: 20px;
+}
+.modal-title > p{
+    position: absolute;
+    color: #fff;
+    top: 45px;
+    left: 80px;
+    /* line-height: 110px; */
+    font-size: 22px;
+    font-weight: 300;
+    padding-left: 20px;
+}
+.modal-body{
+    margin: 10px;
+}
+.modal-body > p:first-child{
+    text-indent: 1rem;
+    font-size: 14px;
+}
+.modal-body > p:first-child > em{
+    font-weight: bolder;
+    font-style: normal;
+    color: #63337D;
+}
+.modal-footer{
+    border-bottom: 1px solid #c9c9c9;
+    text-align: center;
+    font-size: 16px;
+}
+.btn-white{
+    background-color: transparent;
+    border: none;
+    color: #6d1c7e;
+}
+.btn-purpel{
+    width: 120px;
+    height: 30px;
+    color: #fff;
+    background-color: #7A3D8F;
+    border-radius: 5px;
+    font-size: 12px;
+}
+.modal-header >button{
+    position: absolute;
+    top: -50px;
+    font-size: 40px;
+    font-weight: lighter;
+    color: #fff;
+    right: 20px;
+}
+.modal-header >button > span{
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 5px;
+    font-size: 30px;
+}
+.modal-header > button > span::before{
+    content: "";
+    height: 30px;
+    width: 30px;
+    border: 2px solid #fff;
+    position: absolute;
+    border-radius: 20px;
+    right: -18px;
+    top: 4px;
+}
+.close:focus, .close:hover{
+    color: #fff;
+}
