--- a/src/css/information.css
+++ b/src/css/information.css
@@ -320,3 +320,16 @@
 .close:focus, .close:hover{
     color: #fff;
 }
+
+.informationInput{
+    padding: 0px !important;
+
+}
+.informationConditionDataInput>div>input{
+    width: auto;
+}
+input[type=checkbox], input[type=radio] {
+    margin: 0px 0 0;
+    margin-top: 1px\9;
+    line-height: normal;
+}
