--- a/src/css/details.css
+++ b/src/css/details.css
@@ -140,7 +140,7 @@
 
     }
     .detailsItem>div>span{
-        color:#63337d;
+        color:#a974c5;
     }
     .detialConditionDataInput>div{
         display: inline-block;
