--- a/src/css/mobileSelect.css
+++ b/src/css/mobileSelect.css
@@ -153,8 +153,18 @@
   width: 100%;
   height: 30px;
   border-radius: 5px;
-  border: 1px solid #999;
+  border: 1px solid #eee;
   text-align: center;
   font-size: 14px;
   line-height: 40px;
+}
+.color{
+  color:red;
+}
+.colorFont{
+  position: relative;
+}
+.colorFont>span{
+  position: absolute;
+  top:-25px;
 }
