--- a/src/css/forget.css
+++ b/src/css/forget.css
@@ -4,6 +4,9 @@ html{
     outline: none;
     overflow-y: hidden;
 }
+*{
+    outline: none;
+}
 body {
     margin:0;
     padding: 0;
@@ -142,12 +145,16 @@ body {
 .btn-lg-orange{
     width: 100%;
     color: #fff;
-    background-color: #F49401;
+    background-color: #ffd9a0;
+    border: none;
     height: 45px;
-    border-radius: 7px;
+    border-radius: 10px;
     margin: 5px 0 15px 0;
     font-size: 17px;
     font-weight: lighter;
+}
+.btn-lg-orange:focus{
+    background-color: #f59300;
 }
 
 /*底部版权*/
