--- a/src/css/sign-in.css
+++ b/src/css/sign-in.css
@@ -3,6 +3,9 @@ html{
     overflow-x: hidden;
     outline: none;
 }
+*{
+    outline: none;
+}
 body {
     margin:0;
     padding: 0;
@@ -117,12 +120,16 @@ body {
 .btn-lg-purpel{
     width: 100%;
     color: #fff;
-    background-color: #A666B1;
+    background-color: #a766af;
+    border: 0;
     height: 45px;
-    border-radius: 7px;
+    border-radius: 10px;
     margin: 5px 0 15px 0;
     font-size: 17px;
     font-weight: lighter;
+}
+.btn-lg-purpel:focus{
+    background-color: #64167d;
 }
 /*p2*/
 .sign-in-container-p2 > div{
