--- a/src/css/complete.css
+++ b/src/css/complete.css
@@ -155,12 +155,12 @@ body {
 
 /*底部版权*/
 .buttom-img{
-    position: fixed;
+    position: absolute;
     bottom: 96px;
     width: 100%;
 }
 .copyright{
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 96px;
@@ -176,7 +176,8 @@ body {
 .copyright p{
     display: block;
     text-align: center;
-    color: #bbb;
+    color: #fff;
+    opacity: 0.9;
     padding-bottom: 0;
     text-transform: uppercase;
 }
