--- a/src/css/customer.css
+++ b/src/css/customer.css
@@ -224,7 +224,8 @@ body {
 .copyright p{
     display: block;
     text-align: center;
-    color: #bbb;
+    color: #fff;
+    opacity: 0.9;
     padding-bottom: 0;
     text-transform: uppercase;
 }
