--- a/src/css/forget.css
+++ b/src/css/forget.css
@@ -2,7 +2,6 @@ html{
     font-size: 16px;
     overflow-x: hidden;
     outline: none;
-    overflow-y: hidden;
 }
 *{
     outline: none;
@@ -26,6 +25,11 @@ body {
 .col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{
     padding:0;
 }
+
+input::-ms-input-placeholder{color: #999;}
+input::-webkit-input-placeholder{color: #999;}
+input{color: #333;}
+
 .form-control:focus{
     border-color: #c9c9c9;
     box-shadow: none;
@@ -159,12 +163,12 @@ body {
 
 /*底部版权*/
 .buttom-img{
-    position: fixed;
+    position: absolute;
     bottom: 96px;
     width: 100%;
 }
 .copyright{
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 96px;
@@ -180,7 +184,8 @@ body {
 .copyright p{
     display: block;
     text-align: center;
-    color: #bbb;
+    color: #fff;
+    opacity: 0.9;
     padding-bottom: 0;
     text-transform: uppercase;
 }
