--- a/src/css/questionnaire.css
+++ b/src/css/questionnaire.css
@@ -24,6 +24,12 @@ body {
 .col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{
     padding:0;
 }
+
+input::-ms-input-placeholder{color: #999;}
+input::-webkit-input-placeholder{color: #999;}
+input{color: #333!important;}
+textarea{color: #333!important;}
+
 .form-control:focus{
     border-color: #c9c9c9;
     box-shadow: none;
@@ -74,7 +80,6 @@ body {
 .questionnaire-survey-head > img{
     width: 85%;
     position: relative;
-    top: 6px;
 }
 .questionnaire-survey-head p,.questionnaire-survey-head img{
     display: block;
@@ -85,7 +90,7 @@ body {
     text-align: center;
     left: 30px;
     right: 0;
-    top: 53%;
+    top: 45%;
     font-size: 14px;
     color: #fff;
     font-weight: bolder;
@@ -208,6 +213,9 @@ body {
     border-bottom: none;
     padding: 10px;
 }
+.checkbox-custom-else{
+    font-size: 12px;
+}
 
 /*2*/
 .checkbox, .radio{
@@ -319,7 +327,8 @@ body {
 .copyright p{
     display: block;
     text-align: center;
-    color: #bbb;
+    color: #fff;
+    opacity: 0.9;
     padding-bottom: 0;
     text-transform: uppercase;
 }
