--- a/src/css/sign-in.css
+++ b/src/css/sign-in.css
@@ -24,6 +24,11 @@ body {
 .col-xs-1,.col-xs-10,.col-xs-11,.col-xs-12,.col-xs-2,.col-xs-3,.col-xs-4,.col-xs-5,.col-xs-6,.col-xs-7,.col-xs-8,.col-xs-9{
     padding:0;
 }
+
+input::-ms-input-placeholder{color: #999;}
+input::-webkit-input-placeholder{color: #999;}
+input{color: #333;}
+
 .form-control:focus{
     border-color: #c9c9c9;
     box-shadow: none;
@@ -74,7 +79,6 @@ body {
 .sign-in-head > img{
     width: 85%;
     position: relative;
-    top: 6px;
 }
 .sign-in-head p,.sign-in-head img{
     display: block;
@@ -85,7 +89,7 @@ body {
     text-align: center;
     left: 10px;
     right: 0;
-    top: 53%;
+    top: 45%;
     font-size: 14px;
     color: #fff;
     font-weight: bolder;
@@ -98,7 +102,6 @@ body {
     /* background-color: #fff; */
     border-radius: 4px;
     padding: 18px;
-    color: #6d1c7e;
     background: url(../images/m_bg_img.png);
     background-size: contain;
     margin-bottom: 10px;
