--- a/src/css/details.css
+++ b/src/css/details.css
@@ -44,26 +44,23 @@ body {
           display: inline-block;
           width: 30%;
       }
-      .detialConditionDataInput>span>:nth-child(2),
-      .detialConditionDataInputHP>:nth-child(1)>:nth-child(2){
-          color:red;
-      }
       .detialConditionDataInput>input,
       .detialConditionDataInput>select
       {
         width: 65%;
-        border: 1px solid #eeeeee;
+        border: 1px solid #c9c9c9;
         border-radius: 3px;
         height: 30px;
         line-height: 30px; 
         padding: 0 5px;    
-        color:#cdcdcd; 
+        color:#333; 
     }
     .detialConditionDataInput>input[placeholder],
     .detialConditionDataInputHP>:nth-child(2)>div>input[placeholder],
-    .detialConditionDataInput>div>input[placeholder]
+    .detialConditionDataInput>div>input[placeholder],
+    .phone1[placeholder]
     {
-         color: #cdcdcd;
+         color: #999;
          font-size: 12px;
          border-radius: 5px;
     }
@@ -76,7 +73,7 @@ body {
     .detialConditionDataInputHP>:nth-child(2){
         width: 65%;
         height: 30px;
-        color:#cdcdcd; 
+        color:#999; 
     }
     .detialConditionDataInputHP>:nth-child(2)>div{
         display: inline-block;
@@ -90,12 +87,12 @@ body {
         width: 42%;
     }
     .detialConditionDataInputHP>:nth-child(2)>div>input{
-        border: 1px solid #eeeeee;
+        border: 1px solid #c9c9c9;
         border-radius: 3px;
         height: 30px;
         line-height: 30px; 
         padding: 0 5px ;
-        color:#cdcdcd; 
+        color:#999; 
         width: 100%;
     }
     .detialConditionDataInputHP>:nth-child(2)>div>span{
@@ -135,7 +132,7 @@ body {
     }
     
     .detailsButton>:nth-child(2){
-        background-color:#f49300;
+        background-color:#f59300;
     }
     .detailsButton>:nth-child(1){
         background-color:#cdcdcd;
@@ -152,11 +149,12 @@ body {
     }
     .detialConditionDataInput>div>input{
         padding: 0 5px;
-        border: 1px solid #eee;
+        border: 1px solid #c9c9c9;
         border-radius: 3px;
         width:100%;
         height: 30px;
         line-height: 30px;
+        color:#333;
     }
     .detialConditionDataInput>div>span{
         color:#cdcdcd; 
@@ -168,5 +166,87 @@ body {
     .detialConditionDataInput>div>div{
         display: inline-block;
     }
+    .phone{
+        display: inline-block;
+        width: 65% !important;
+    }
+   .phone1{
+        padding: 0 5px;
+        border: 1px solid #c9c9c9;
+        border-radius: 3px !important;
+        height: 30px;
+        line-height: 30px;
+        color:#333;
+       width: 29.5% !important;
+   }
+
+     /*模态框*/
+.modal-dialog{
+    margin-top: 80px;
+    }
+    .modal-header{
+    color: #7A3D8F;
+    background-color: #FDF4FC;
+    text-align: center;
+    border: none;
+    }
+    .modal-header > h4{
+    font-weight: bold;
+    font-size: 13px;
+    }
+    .modal-body{
+    margin: 30px;
+    border: 1px solid #eee;
+    padding: 20px;
+    }
+    .modal-body h5{
+    font-weight: bolder;
+    padding: 5px 0;
+    }
+    .modal-footer{
+    border: 0;
+    text-align: center;
+    }
+    .btn-purpel{
+    width: 120px;
+    height: 30px;
+    color: #fff;
+    background-color: #7A3D8F;
+    border-radius: 5px;
+    font-size: 12px;
+    }
+    .modal-header >button{
+    position: absolute;
+    top: -60px;
+    font-size: 30px;
+    font-weight: lighter;
+    color: #fff;
+    right: 20px;
+    }
+    .modal-header >button > span{
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 40px;
+    }
+    .modal-header > button > span::before{
+        content: "";
+        height: 30px;
+        width: 30px;
+        border: 2px solid #fff;
+        position: absolute;
+        border-radius: 30px;
+        right: 4px;
+        top: 3px;
     
+    }
+    .modal-header > button > span::after{
+        content: "";
+    height: 50px;
+    border: 1px solid #fff;
+    position: absolute;
+    top: 34px;
+    right: 20px;
+    
+    }
          
