--- a/src/css/login1.css
+++ b/src/css/login1.css
@@ -58,7 +58,13 @@ body{
     font-size: 14px;
 }
 .sign-in-container-p1>button{
-    background-color: #f49300;
+    border:none !important;
+    background-color: #ffd9a0;
+    font-size: 16px;
+    border-radius: 10px;
+}
+.sign-in-container-p1>button:focus{
+    background-color: #f59300;
 }
    /*底部版权*/
    .buttom-img{
@@ -83,7 +89,8 @@ body{
     .copyright p{
     display: block;
     text-align: center;
-    color: #bbb;
+    color: #fff;
+    opacity: 0.9;
     padding-bottom: 0;
     text-transform: uppercase;
     }
@@ -177,3 +184,74 @@ body{
     font-size: 15px;
     font-weight: lighter;
 }
+
+.modal-dialog{
+    margin-top: 80px;
+    }
+    .modal-header{
+height: 50px;
+    color: #7A3D8F;
+    background-color: #FDF4FC;
+    text-align: center;
+    border: none;
+    }
+    .modal-header > h4{
+        line-height: 50px;
+    font-weight: bold;
+    font-size: 13px;
+    }
+    .modal-body{
+    margin: 30px;
+    border: 1px solid #eee;
+    padding: 20px;
+    }
+    .modal-body h5{
+    font-weight: bolder;
+    padding: 5px 0;
+    }
+    .modal-footer{
+    border: 0;
+    text-align: center;
+    }
+    .btn-purpel{
+    width: 120px;
+    height: 30px;
+    color: #fff;
+    background-color: #7A3D8F;
+    border-radius: 5px;
+    font-size: 12px;
+    }
+    .modal-header >button{
+    position: absolute;
+    top: -60px;
+    font-size: 30px;
+    font-weight: lighter;
+    color: #fff;
+    right: 20px;
+    }
+    .modal-header >button > span{
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    width: 40px;
+    }
+    .modal-header > button > span::before{
+        content: "";
+        height: 30px;
+        width: 30px;
+        border: 2px solid #fff;
+        position: absolute;
+        border-radius: 30px;
+        right: 4px;
+        top: 3px;
+    
+    }
+    .modal-header > button > span::after{
+        content: "";
+    height: 50px;
+    border: 1px solid #fff;
+    position: absolute;
+    top: 34px;
+    right: 20px;
+    
+    }
