--- a/src/css/mobileSelect.css
+++ b/src/css/mobileSelect.css
@@ -153,10 +153,11 @@
   width: 100%;
   height: 30px;
   border-radius: 5px;
-  border: 1px solid #eee;
+  border: 1px solid #c9c9c9;
   text-align: center;
   font-size: 14px;
   line-height: 40px;
+  color: #333;
 }
 .color{
   color:red;
