--- a/src/css/index.css
+++ b/src/css/index.css
@@ -133,7 +133,7 @@
    .classInput>input{
        margin: 10px 0;
        width:120px;
-       border: 1px solid #eeeeee;
+       border: 1px solid #c9c9c9;
        border-radius: 3px;
        height: 28px;
        line-height: 28px; 
@@ -141,7 +141,7 @@
    }
    .classKind>div>input{
       width: 260px;
-      border: 1px solid #eeeeee;
+      border: 1px solid #c9c9c9;
       border-radius: 3px;
       height: 28px;
       line-height: 28px;
@@ -149,7 +149,7 @@
     .classKind>div>input[placeholder]{
         font-size: 12px;
         padding: 0 6px;
-        color: #eeeeee;
+        color: #999;
     }
     .classSearch{
         display: inline-block;
@@ -262,7 +262,7 @@
         margin: 10px auto;
         height: 30px;
         line-height: 30px;
-        background-color: #f49300;
+        background-color: #f59300;
         color: #fff;
         text-align: center;
         font-size: 15px;
@@ -281,6 +281,7 @@
         margin-bottom: 5px;
     }
     .attention>p{
+        text-align: left;
       font-size: 13px;
       margin-bottom: 5px;
     }
@@ -307,7 +308,8 @@
     .copyright p{
     display: block;
     text-align: center;
-    color: #bbb;
+    color: #fff;
+    opacity: 0.9;
     padding-bottom: 0;
     text-transform: uppercase;
     }
