--- a/src/css/information.css
+++ b/src/css/information.css
@@ -210,14 +210,15 @@
         width: 94%;
         margin: 10px  auto;
         }
-        .btn-lg-purpel{
+    .btn-lg-purpel{
+        border:none !important;
         width: 100%;
         color: #fff;
-        background-color: #A666B1;
+        background-color: #64167d;
         height: 45px;
-        border-radius: 7px;
+        border-radius: 10px;
         margin: 5px 0 15px 0;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: lighter;
      }
 
