--- a/src/css/questionnaire.css
+++ b/src/css/questionnaire.css
@@ -332,6 +332,10 @@ textarea{color: #333!important;}
     padding-bottom: 0;
     text-transform: uppercase;
 }
+.copyright a{
+    color: #fff!important;
+    text-decoration: none;
+}
 .copyright-text > p:first-child{
     font-size: 12px;
 }
