--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,6 +8,9 @@
         position: relative;
         font-size:1em;
     }
+    *{
+        outline: none;
+    }
     .head{
         position: relative;
     }
@@ -284,6 +287,16 @@
         text-align: left;
       font-size: 13px;
       margin-bottom: 5px;
+    }
+    .attention>p>span{
+        display: inline-block;
+    }
+    .attention>p>:nth-child(1){
+        width: 5%;
+        vertical-align: top;
+    }
+    .attention>p>:nth-child(2){
+        width: 94%;
     }
     /*底部版权*/
 .buttom-img{
